Fix Issue #544 Error when redoing a section time signature change + ClsActionEvent/SgsActionEvent/SongMetaEvents redesign. Need to complete ClsSgsLinkTest.